# aerovault

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: audit.toml
.github/: release-footer.md
.github/workflows/: release.yml
aerovault/: Cargo.toml
aerovault-cli/: Cargo.toml  README.md
aerovault-cli/src/: main.rs  v3cmd.rs
aerovault/examples/: bench_dict_proxy.rs  bench_ratio.rs  measure_mem.rs
aerovault/src/: aerocrypt.rs  constants.rs  crypto.rs  error.rs  format.rs  lib.rs  vault.rs
aerovault/src/error_correction/: mod.rs  sidecar.rs  standalone.rs  sync.rs
aerovault/src/v3/: block.rs  chunking.rs  constants.rs  ec.rs  format.rs  manifest.rs  mod.rs  packing.rs  telemetry.rs  vault.rs
aerovault/tests/: aerocorrect_cross_impl.rs  aerovault3_cross_impl_v3.rs  streaming_stress.rs
aerovault/tests/fixtures/: aerovault3_golden.av3  cross_impl_payload.bin.aerocorrect
audit/: README.md
audit/2026-05-30_deep-audit/: REPORT.md
audit/2026-06-03_dual-independent/: REPORT.md
audit/2026-06-18_phase2-controaudit/: REPORT.md
docs/: AEROCORRECT-SPEC.md  AEROVAULT-V2-SPEC.md  AEROVAULT-V3-SPEC.md
